chore: update CHANGELOG for version 0.1.18 with ToolButton label alignment fix

--- a/src/components/ToolButton/ToolButton.module.scss
+++ b/src/components/ToolButton/ToolButton.module.scss
@@ -52,4 +52,5 @@
 
   width: 100%;
   min-width: 0;
+  text-align: center;
 }
